added a sample audio and image to the web page

--- a/index.html
+++ b/index.html
@@ -6,4 +6,13 @@
     <body>
         <h1>Hello World</h1>
     </body>
+    <div>
+        <p>Picture!!!</p>
+        <img src="https://unsplash.com/photos/RrhhzitYizg" title="book" style="width:500px">
+    </div>
+    <div>
+        <audio controls>
+            <source src="sample.mp3" type="audio/mpeg">
+        </audio>
+    </div>
 </html>
