updated image link to display correctly

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </body>
     <div>
         <p>Picture!!!</p>
-        <img src="https://unsplash.com/photos/RrhhzitYizg" title="book" style="width:500px">
+        <img src="https://www.fda.gov/files/Coronavirus_3D_illustration_by_CDC_1600x900.png" style="width:500px">
     </div>
     <div>
         <audio controls>
