added a Youtube video that starts at 30 seconds

--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
         <title>Hello World</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1 style="color:blue;text-align:center;">Hello World</h1>
     </body>
     <div>
         <p>Picture!!!</p>
         <img src="https://www.fda.gov/files/Coronavirus_3D_illustration_by_CDC_1600x900.png" style="width:500px">
     </div>
     <div>
+        <p>Audio!!!</p>
         <audio controls>
             <source src="sample.mp3" type="audio/mpeg">
         </audio>
+    </div>
+    <div>
+        <p>Video!!!</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qrEAi_MC-4M?start=30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </html>
