added a video using HTML5 video tag

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     <div>
         <p>Audio!!!</p>
         <audio controls>
-            <source src="sample.mp3" type="audio/mpeg">
+            <source src="video_sample.mp4" type="audio/mpeg">
         </audio>
+    </div>
+    <div>
+        <p>Video!!!</p>
+        <video width="320" height="240" controls>
+            <source src="sample.mp3" type="video/mp4">
+        </video>
     </div>
     <div>
         <p>Video!!!</p>
