--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <div>
         <p>Audio!!!</p>
         <audio controls>
-            <source src="video_sample.mp4" type="audio/mpeg">
+            <source src="sample.mp3" type="audio/mpeg">
         </audio>
     </div>
     <div>
         <p>Video!!!</p>
         <video width="320" height="240" controls>
-            <source src="sample.mp3" type="video/mp4">
+            <source src="video_sample.mp4" type="video/mp4">
         </video>
     </div>
     <div>
-        <p>Video!!!</p>
+        <p>Youtube Video Linked!!!</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/qrEAi_MC-4M?start=30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </html>
