--- a/index.html
+++ b/index.html
@@ -26,4 +26,8 @@
         <p>Youtube Video Linked!!!</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/qrEAi_MC-4M?start=30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+    <div>
+        <p>Image Using Object Tag!!!</p>
+        <object data="sample_image2.jpg" width="300" height="200"></object>
+    </div>
 </html>
