--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div>
         <p>Video!!!</p>
         <video width="320" height="240" controls>
-            <source src="video_sample.mp4" type="video/mp4">
+            <source src="sample_video.mp4" type="video/mp4">
         </video>
     </div>
     <div>
