--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -1,36 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Hello World</title>
-    </head>
-    <body>
-        <h1 style="color:blue;text-align:center;">Hello World</h1>
-    </body>
-    <div>
-        <p>Picture!!!</p>
-        <img src="https://www.fda.gov/files/Coronavirus_3D_illustration_by_CDC_1600x900.png" style="width:500px">
-    </div>
-    <div>
-        <p>Audio!!!</p>
-        <audio controls>
-            <source src="sample.mp3" type="audio/mpeg">
-        </audio>
-    </div>
-    <div>
-        <p>Video!!!</p>
-        <video width="320" height="240" controls>
-            <source src="sample_video.mp4" type="video/mp4">
-        </video>
-    </div>
-    <div>
-        <h2>Youtube Video Linked!!!</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/qrEAi_MC-4M?start=30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <h2>Google Map!!!</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.4972870156507!2d-122.30570858436782!3d47.65533507918788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549014929d8535eb%3A0x6b742c7901b82ba3!2sUniversity%20of%20Washington!5e0!3m2!1sen!2sus!4v1633659654204!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
-    <div>
-        <p>Image Using Object Tag!!!</p>
-        <object data="sample_image2.jpg" width="300" height="200"></object>
-    </div>
-    <button type="button">A button that was not demoed in class!!!</button>
+
+<head>
+    <title>Hello World</title>
+</head>
+
+<body>
+    <h1 style="color:blue;text-align:center;">Hello World</h1>
+</body>
+<div>
+    <p>Picture!!!</p>
+    <img src="https://www.fda.gov/files/Coronavirus_3D_illustration_by_CDC_1600x900.png" style="width:500px">
+</div>
+<div>
+    <p>Audio!!!</p>
+    <audio controls>
+        <source src="sample.mp3" type="audio/mpeg">
+    </audio>
+</div>
+<div>
+    <p>Video!!!</p>
+    <video width="320" height="240" controls>
+        <source src="sample_video.mp4" type="video/mp4">
+    </video>
+</div>
+<div>
+    <h2>Youtube Video Linked!!!</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/IxjNzkrDXpM?start=180&end=360"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    <h2>Google Map!!!</h2>
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.4972870156507!2d-122.30570858436782!3d47.65533507918788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549014929d8535eb%3A0x6b742c7901b82ba3!2sUniversity%20of%20Washington!5e0!3m2!1sen!2sus!4v1633659654204!5m2!1sen!2sus"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</div>
+<div>
+    <p>Image Using Object Tag!!!</p>
+    <object data="sample_image2.jpg" width="300" height="200"></object>
+</div>
+<button type="button">A button that was not demoed in class!!!</button>
+<div>
+    <h1>RSS Feed of Google News!!!</h1>
+    <script language="JavaScript"
+        src="https://www.feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fnews.google.com%2Frss&chan=y&num=5&desc=1&utf=y"
+        charset="UTF-8" type="text/javascript"></script>
+
+    <noscript>
+        <a
+            href="https://www.feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fnews.google.com%2Frss&chan=y&num=5&desc=1&utf=y&html=y">View
+            RSS feed</a>
+    </noscript>
+
+</div>
+
 </html>
