changed header size

--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -9,17 +9,17 @@
     <h1 style="color:blue;text-align:center;">Hello World</h1>
 </body>
 <div>
-    <p>Picture!!!</p>
+    <h2>Picture!!!</h2>
     <img src="https://www.fda.gov/files/Coronavirus_3D_illustration_by_CDC_1600x900.png" style="width:500px">
 </div>
 <div>
-    <p>Audio!!!</p>
+    <h2>Audio!!!</h2>
     <audio controls>
         <source src="sample.mp3" type="audio/mpeg">
     </audio>
 </div>
 <div>
-    <p>Video!!!</p>
+    <h2>Video!!!</h2>
     <video width="320" height="240" controls>
         <source src="sample_video.mp4" type="video/mp4">
     </video>
@@ -36,7 +36,7 @@
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
 <div>
-    <p>Image Using Object Tag!!!</p>
+    <h2>Image Using Object Tag!!!</h2>
     <object data="sample_image2.jpg" width="300" height="200"></object>
 </div>
 <button type="button">A button that was not demoed in class!!!</button>
