added paddings to button

--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -39,7 +39,7 @@
     <h2>Image Using Object Tag!!!</h2>
     <object data="sample_image2.jpg" width="300" height="200"></object>
 </div>
-<button type="button">A button that was not demoed in class!!!</button>
+<button type="button" style="height: 30px; width: 500px; font-size: 20px; font-weight: bold; margin-top: 100px; margin-bottom: 100px;">A button tag that was not demoed in class!!!</button>
 <div>
     <h1>RSS Feed of Google News!!!</h1>
     <script language="JavaScript"
