--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -264,6 +264,18 @@
 
 			<p>&nbsp;</p>
 
+			<fieldset>
+				<legend>Personal Statement</legend>
+				<div class="form-group">
+					<label class="control-label">Why Facebook?</label>
+					<textarea class="form-control" name="why_facebook" rows="6"></textarea>
+				</div>
+				<div class="form-group">
+					<label class="control-label">Why are you a good fit?</label>
+					<textarea class="form-control" name="why_good_fit" rows="6"></textarea>
+				</div>
+			</fieldset>
+			
 			<input class="btn btn-primary btn-lg" type="submit" value="Submit form">
 
 			<p>&nbsp;</p>
