--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -268,14 +268,19 @@
 				<legend>Personal Statement</legend>
 				<div class="form-group">
 					<label class="control-label">Why Facebook?</label>
+					<br>
 					<textarea class="form-control" name="why_facebook" rows="6"></textarea>
 				</div>
+				<p>&nbsp;</p>
 				<div class="form-group">
 					<label class="control-label">Why are you a good fit?</label>
+					<br>
 					<textarea class="form-control" name="why_good_fit" rows="6"></textarea>
 				</div>
 			</fieldset>
-			
+
+			<p>&nbsp;</p>
+
 			<input class="btn btn-primary btn-lg" type="submit" value="Submit form">
 
 			<p>&nbsp;</p>
